--- a/contacto.html
+++ b/contacto.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <h2>Contacto</h2>
-        <img class="logo" src="./Imagenes/logo3.png" alt="logo">
+        <img class="logo" src="./Imagenes/logo4.png" alt="logo">
         <nav>
             <img class="percha" src="Imagenes/percha.png" alt="percha">
             <a class="home" href="index.html">Volver a la home</a>
@@ -68,6 +68,17 @@
             <button type="reset">Reset</button>
         </form>
     </main>
+<br><br>
+    <footer>
+        <p>Seguinos en las redes</p>
+       <br>
+            <nav>
+                <a href="https://instagram.com" target="_blank">
+                <img src="./Imagenes/instagram-3.png" alt="instagram" width="20px"></a>
+                <a href="https://facebook.com" target="_blank">
+                <img src="./Imagenes/facebook2.png" alt="facebook" width="20px"></a>
+            </nav>
+    </footer>
 </body>
 
 </html>
