--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <title>Codo Moda</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="Imagenes/percha.png" type="imagen/x-icon">
+    <script src="https://kit.fontawesome.com/d9a647ce66.js" crossorigin="anonymous"></script>
 
 <body>
     <header>
-        <img class="logo" src="./Imagenes/logo3.png" alt="logo">
+        <img class="logo" src="./Imagenes/logo4.png" alt="logo">
         <h1>Codo Moda</h1> <br>
         <h2>Te ayudamos a encontrar tu estilo</h2>
         <nav>
@@ -46,7 +47,7 @@
             Más allá de las modas y tendencias, creemos que nuestra vestimenta es una forma de expresión, una forma de comunicar 
             sentimientos, estados de ánimo y -por sobre todas las cosas- al sentirnos cómodas y seguras, nos potencia y nos 
             hace brillar. Con nuestra experiencia y amor por la moda, podemos ayudarte a enconrar tu estilo, a través de 
-            prendas que te hagan sentir cómoda, segura y auténtica. Adaptar las tendencias a tu estilo, potenciarte y, 
+            prendas que te hagan sentir cómoda, segura y auténtica. Queremos guiarte para Adaptar las tendencias a tu estilo, potenciarte y, 
             de esta forma, ayudarte a ir más lejos para que puedas lograr todo lo que te propongas.
 
             Somos Mechi Gaona y Sole Tezanos, amigas hace años. Tenemos 18 años de experiencia en styling, trabajamos con marcas
@@ -54,9 +55,10 @@
         </p>
     </main>
 </body>
-
+ <br><br>
 <footer>
     <p>Seguinos en las redes</p>
+   <br>
         <nav>
             <a href="https://instagram.com" target="_blank">
             <img src="./Imagenes/instagram-3.png" alt="instagram" width="20px"></a>
