--- a/looks.html
+++ b/looks.html
@@ -11,7 +11,7 @@
     
 <body>
     <header>
-        <img class="logo" src="./Imagenes/logo3.png" alt="logo">
+        <img class="logo" src="./Imagenes/logo4.png" alt="logo">
         <h2>Inspiración para que armes tus looks</h2>
         <nav>
             <img class="percha" src="Imagenes/percha.png" alt="percha">
@@ -19,22 +19,29 @@
         </nav>
     </header>
     <div class="container">
-        <h2>Tips para varios días</h2>
-        <div><img class="look1" src="Imagenes/1.png" alt="look1"></div>
-        <div><img class="look2" src="Imagenes/2.png" alt="look2"></div>
-        <div><img class="look3" src="Imagenes/3.png" alt="look3"></div>
-        <div><img class="look4" src="Imagenes/4.png" alt="look4"></div>
-        <div><img class="look5" src="Imagenes/5.png" alt="look5"></div>
-        <div><img class="look6" src="Imagenes/6.png" alt="look6"></div>
-        <div><img class="look7" src="Imagenes/7.png" alt="look7"></div>
-        <div><img class="look8" src="Imagenes/8.png" alt="look8"></div>
-        <div><img class="look9" src="Imagenes/9.png" alt="look9"></div>
-        <div><img class="look10" src="Imagenes/10.png" alt="look10"></div>
-        <div><img class="look11" src="Imagenes/11.png" alt="look11"></div>
-        <div><img class="look12" src="Imagenes/12.png" alt="look12"></div>
-        <div><img class="look13" src="Imagenes/13.png" alt="look13"></div>
-        <div><img class="look14" src="Imagenes/14.png" alt="look14"></div>
-        <div><img class="look15" src="Imagenes/15.png" alt="look15"></div>
+        
+        <p>La idea es que, inspirándote en las propuestas que mostramos más abajo, 
+            puedas creer tus propios looks, con lo que vos tengas en tu 
+            guardarropas. Muchas veces con prendas básicas, sumándole accesorios
+            y mezclando colores que nos favorezcan, logremos darle una vuelta de
+            tuerca y así elevar nuestro outfit.
+        </p>
+
+        <div class="card"><img class="look1" src="Imagenes/1.png" alt="look1"></div>
+        <div class="card"><img class="look2" src="Imagenes/2.png" alt="look2"></div>
+        <div class="card"><img class="look3" src="Imagenes/3.png" alt="look3"></div>
+        <div class="card"><img class="look4" src="Imagenes/4.png" alt="look4"></div>
+        <div class="card"><img class="look5" src="Imagenes/5.png" alt="look5"></div>
+        <div class="card"><img class="look6" src="Imagenes/6.png" alt="look6"></div>
+        <div class="card"><img class="look7" src="Imagenes/7.png" alt="look7"></div>
+        <div class="card"><img class="look8" src="Imagenes/8.png" alt="look8"></div>
+        <div class="card"><img class="look9" src="Imagenes/9.png" alt="look9"></div>
+        <div class="card"><img class="look10" src="Imagenes/10.png" alt="look10"></div>
+        <div class="card"><img class="look11" src="Imagenes/11.png" alt="look11"></div>
+        <div class="card"><img class="look12" src="Imagenes/12.png" alt="look12"></div>
+        <div class="card"><img class="look13" src="Imagenes/13.png" alt="look13"></div>
+        <div class="card"><img class="look14" src="Imagenes/14.png" alt="look14"></div>
+        <div class="card"><img class="look15" src="Imagenes/15.png" alt="look15"></div>
     </div>
 </body>
 
