--- a/historia.html
+++ b/historia.html
@@ -28,7 +28,7 @@
             Los hombres ya no eran las figuras paternas, sino joviales y ligeros. 
             Se utilizaba el corsé y la silueta era exagerada.
             </p>
-            <img class="fotos" src="Imagenes/19100.png" alt="1910">
+            <img class="fotos" src="Imagenes/1910.jpg" alt="1910">
         </div>
         <div class="item">
             <h3>1920</h3>
