--- a/show-data.html
+++ b/show-data.html
@@ -7,14 +7,13 @@
 <body>
   <p align=center>&nbsp;</p>
   <h1 align=center>
-    <font size="+1">The following information has been sent as your
-      feedback:</font>
+    <font size="+1">Se ha enviado la siguiente informaciön:</font>
   </h1>
 
   <table border="1" align=center width="226">
     <tr>
-      <th align="center">Form Field</th>
-      <th align="center">Field Value</th>
+      <th align="center">Campo</th>
+      <th align="center">Valor</th>
     </tr>
 
     <script language="javascript">
